# web-security

./: Pipfile  pyproject.toml  solve_lab.py
cross-site-scripting/: 01-lab-html-context-nothing-encoded.py  02-lab-html-context-nothing-encoded.py  03-lab-document-write-sink.py  05-lab-jquery-href-attribute-sink.py
sql-injection/: 01-lab-retrieve-hidden-data.py  02-lab-login-bypass.py  03-lab-querying-database-version-oracle.py  04-lab-querying-database-version-mysql-microsoft.py  05-lab-listing-database-contents-non-oracle.py  06-lab-listing-database-contents-oracle.py  07-lab-determine-number-of-columns.py  08-lab-find-column-containing-text.py  09-lab-retrieve-data-from-other-tables.py  10-lab-retrieve-multiple-values-in-single-column.py  12-lab-conditional-errors.py  14-lab-time-delays.py  15-lab-time-delays-info-retrieval.py
templates/: csrf.html  csrf_get.html  csrf_post.html
web-security/: exploit_server.py  lab_session.py  main.py  utils.py
web-security/access-control/: lab-user-role-can-be-modified-in-user-profile.py  lab-user-role-controlled-by-request-parameter.py
web-security/file-path-traversal/: lab-absolute-path-bypass.py  lab-sequences-stripped-non-recursively.py  lab-simple.py  lab-superfluous-url-decode.py  lab-validate-file-extension-null-byte-bypass.py  lab-validate-start-of-path.py
web-security/os-command-injection/: lab-blind-output-redirection.py  lab-blind-time-delays.py  lab-simple.py
web-security/sql-injection/: lab-login-bypass.py  lab-retrieve-hidden-data.py  (+1 more)
web_security/: main.py
web_security_academy/: main.py
(+270 files in other folders)
