[tool.poetry]
name = "web-security-academy"
version = "0.1.0"
description = ""
authors = ["Alvin Nguyen <alvinonguyen00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
cryptography = "^42.0.5"
gmpy2 = "^2.1.5"
httpcore = {extras = ["asyncio"], version = "^1.0.5"}
httpx = {extras = ["http2"], version = "^0.27.0"}
jinja2 = "^3.1.3"
lxml = "^5.2.1"
pycryptodomex = "^3.20.0"
pyjwt = "^2.8.0"
python-jose = "^3.3.0"
requests = "^2.31.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
